--- a/rootdir/ueventd.samsungjanice.rc
+++ b/rootdir/ueventd.samsungjanice.rc
@@ -8,22 +8,22 @@
 # XTI trace device
 /dev/stm                  0660   media      system
 
-# modem driver - CS-Call
+# Modem driver - CS-Call
 /dev/modemaudio           0660   audio      audio
 
-# camera and flash devices
+# Camera and flash devices
 /dev/mmio_camera          0660   media      system
 /dev/camera_flash         0660   media      system
 
 # Sensor i2c
 /dev/i2c-2                0660   media      system
-/dev/i2c-4		  0660	 system		system
+/dev/i2c-4		  0660	 system     system
 
 # PWR QOS devices
-/dev/ape_opp              0660   media     system
-/dev/ddr_opp              0660   media     system
+/dev/ape_opp              0660   media      system
+/dev/ddr_opp              0660   media      system
 
-# hwmem driver
+# HWMEM driver
 /dev/hwmem                0666   media      system
 
 # Mali 3D IP
@@ -32,28 +32,26 @@
 # B2R2 device
 /dev/b2r2_blt             0666   system     graphics
 
-# overlay device
+# Overlay device
 /dev/disp0                0666   system     graphics
-
-# overlay device
 /dev/comp0                0666   system     graphics
 
 # AT USB device - used by ATC
 /dev/ttyGS0               0060   root       radio
 
-#permission for dun
-/dev/dun               0660   system     system
+# Permission for dun
+/dev/dun                  0660   system     system
 
-# modem storage pipe
+# Modem storage pipe
 /dev/rpc                  0600   radio      radio
 
 # Trusted Eexecution Engine
 /dev/tee                  0666   root       system
 
-/dev/socket/cops.socket   0777   nobody   nobody
-/dev/socket/cspsa_socket_CSPSA0   0666   root   root
-/dev/db8500-modem-trace   0600   root   root
-/dev/dbx500_mloader_fw   0600   root   root
+/dev/socket/cops.socket   0777   nobody     nobody
+/dev/socket/cspsa_socket_CSPSA0  0666   root   root
+/dev/db8500-modem-trace   0600   root       root
+/dev/dbx500_mloader_fw    0600   root       root
 /dev/block/mmcblk0p19     0660   system     system
 
 # Sensors
